chore (web): fix styling issues on mobile

--- a/site/src/App.css
+++ b/site/src/App.css
@@ -3,15 +3,10 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 50vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-
-  }
-}
 .App-header {
   background-color: #282c34;
   min-height: 95vh;
@@ -25,13 +20,35 @@
   padding-right: 20%;
 }
 
+@media (max-width: 767px) {
+  .App-header {
+    padding-left: 1%;
+    padding-right: 1%;
+  }
+}
+
 .App-link {
   color: #61dafb;
   margin: 10px;
 }
 
-.No-margin-top {
+.divider {
+  margin: 0 10px;
+}
+
+.flex-container {
+  align-items: center;
+  display: flex;
+  margin-top: 20px;
+}
+
+.no-margin-top {
   margin-top: 0;
+}
+
+.no-list {
+  list-style: none;
+  padding-left: 0;
 }
 
 blockquote {
@@ -47,13 +64,4 @@ footer {
 
 footer a {
   color: gray;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
